--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "nodemon": "^3.1.7"
   },
   "dependencies": {
-    "bootstrap": "^5.3.3"
+    "bootstrap": "^5.3.3",
+    "express": "^5.1.0"
   }
 }
